--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4348,7 +4348,6 @@ payload:
   - '+.533.net'
   - '+.5334.com'
   - '+.53340.gs'
-  - '+.533422.com'
   - '+.5336.com'
   - '+.5338.org'
   - '+.533y.com'
@@ -6382,7 +6381,6 @@ payload:
   - '+.91yxl.com'
   - '+.91zhiwang.com'
   - '+.91zwk.com'
-  - '+.91zy.com'
   - '+.92.net'
   - '+.921.com'
   - '+.9211.com'
@@ -9524,7 +9522,6 @@ payload:
   - '+.baixing.net'
   - '+.baixingcdn.com'
   - '+.baixingjd.com'
-  - '+.baixingmall.com'
   - '+.baixiu.org'
   - '+.baiyangwang.com'
   - '+.baiyangzb.com'
@@ -9673,6 +9670,7 @@ payload:
   - '+.banyunjuhe.com'
   - '+.banzhe.xyz'
   - '+.banzou.name'
+  - '+.banzouzhizuo.com'
   - '+.bao-cun.com'
   - '+.bao-fang.com'
   - '+.bao-hulu.com'
@@ -10167,6 +10165,7 @@ payload:
   - '+.benber-tech.com'
   - '+.benber.com'
   - '+.benbun.com'
+  - '+.bendan.website'
   - '+.bendi5.com'
   - '+.bendibao.com'
   - '+.bendiso.com'
@@ -12948,7 +12947,6 @@ payload:
   - '+.cf-ns.net'
   - '+.cf.com'
   - '+.cf69.com'
-  - '+.cf865.com'
   - '+.cf9q4i.xyz'
   - '+.cfachina.org'
   - '+.cfbond.com'
@@ -14439,7 +14437,6 @@ payload:
   - '+.chunbo.com'
   - '+.chunboimg.com'
   - '+.chuncui.net'
-  - '+.chuncuinet.com'
   - '+.chundi.com'
   - '+.chundi.org'
   - '+.chunengauto.com'
@@ -14608,7 +14605,6 @@ payload:
   - '+.cirs-reach.com'
   - '+.cirunzhang.com'
   - '+.cismef.com'
-  - '+.cispotlight.com'
   - '+.cisskwt.com'
   - '+.citahub.com'
   - '+.citascumbres.com'
@@ -15138,7 +15134,6 @@ payload:
   - '+.cndoors.com'
   - '+.cndsnet.com'
   - '+.cndss.net'
-  - '+.cndtlab.com'
   - '+.cndtour.com'
   - '+.cndw.com'
   - '+.cndy.org'
@@ -17075,7 +17070,6 @@ payload:
   - '+.danji100.com'
   - '+.danji8.com'
   - '+.danji9.com'
-  - '+.danjuan.com'
   - '+.danjuanapp.com'
   - '+.danjuanfunds.com'
   - '+.danke.com'
@@ -18873,7 +18867,6 @@ payload:
   - '+.dreamad.mobi'
   - '+.dreamcast.hk'
   - '+.dreamchasercapital.com'
-  - '+.dreamersall.com'
   - '+.dreamershop.com'
   - '+.dreamine.com'
   - '+.dreamkite.net'
@@ -20225,7 +20218,6 @@ payload:
   - '+.enbrands.com'
   - '+.enec.net'
   - '+.enelcn.com'
-  - '+.enen11.com'
   - '+.enet360.com'
   - '+.enetedu.com'
   - '+.enfi.vip'
@@ -20408,7 +20400,6 @@ payload:
   - '+.ershenghuo.net'
   - '+.ershicimi.com'
   - '+.ershouhui.com'
-  - '+.ert123.com'
   - '+.ert295.com'
   - '+.ert7.com'
   - '+.ertmineq.com'
@@ -23907,7 +23898,6 @@ payload:
   - '+.grt-china.com'
   - '+.grth.xyz'
   - '+.gruntjs.net'
-  - '+.grvape.com'
   - '+.gryu.net'
   - '+.grzmz.com'
   - '+.gs.ww.np.dl.playstation.net'
@@ -24582,7 +24572,6 @@ payload:
   - '+.gzqiche.com'
   - '+.gzqljxd.com'
   - '+.gzqunsheng.com'
-  - '+.gzqwkj.com'
   - '+.gzqxxz.net'
   - '+.gzrishun.com'
   - '+.gzrmw.com'
@@ -24921,7 +24910,6 @@ payload:
   - '+.haiyingshuju.com'
   - '+.haiyue.info'
   - '+.haiyun.me'
-  - '+.haiyunx.com'
   - '+.haizhangs.com'
   - '+.haizhanweb.com'
   - '+.haizhixing.net'
@@ -26762,7 +26750,6 @@ payload:
   - '+.hongjiu66.com'
   - '+.hongkang-life.com'
   - '+.hongkongairlines.com'
-  - '+.hongkongbluebag.hk'
   - '+.hongkou.net'
   - '+.hongku.com'
   - '+.hongkunjinfu.com'
@@ -29164,7 +29151,6 @@ payload:
   - '+.ilustrepro.com'
   - '+.iluvatar.ai'
   - '+.ilv6.com'
-  - '+.ilvping.com'
   - '+.ilxdh.com'
   - '+.im-cc.com'
   - '+.im170.com'
@@ -31806,7 +31792,6 @@ payload:
   - '+.jnyestar.com'
   - '+.jnzcsyj.com'
   - '+.jnzfwz.com'
-  - '+.jnzhonglidjc.com'
   - '+.jnzixun.com'
   - '+.jnzycw.com'
   - '+.jo43.com'
@@ -32843,7 +32828,6 @@ payload:
   - '+.kanfeidie.com'
   - '+.kangaiweishi.com'
   - '+.kangame.tv'
-  - '+.kangaroobro.com'
   - '+.kangbaifoundation.com'
   - '+.kangbatv.com'
   - '+.kangbidz.com'
@@ -33446,7 +33430,6 @@ payload:
   - '+.kl87n.xyz'
   - '+.kl91ccp.com'
   - '+.klandk.com'
-  - '+.klchemicals.com'
   - '+.kldjy.com'
   - '+.klhuyan.com'
   - '+.klianfa.com'
@@ -33512,7 +33495,6 @@ payload:
   - '+.knockdream.com'
   - '+.knotesapp.com'
   - '+.know88.com'
-  - '+.knowgive.com'
   - '+.knowingclouds.com'
   - '+.knowingcloudvip.com'
   - '+.knowingyun.com'
@@ -33751,7 +33733,6 @@ payload:
   - '+.ktbiao.com'
   - '+.ktfdsb.com'
   - '+.kting.info'
-  - '+.ktjd.net'
   - '+.ktkt.com'
   - '+.ktlshu.vip'
   - '+.ktlstbg.com'
@@ -35074,6 +35055,7 @@ payload:
   - '+.li91.com'
   - '+.liageren.com'
   - '+.lialiu.com'
+  - '+.lian-ou.com'
   - '+.lianaibashi.com'
   - '+.lianaibiji.com'
   - '+.lianaimh.com'
@@ -35122,6 +35104,7 @@ payload:
   - '+.lianmeng.link'
   - '+.lianmenhu.com'
   - '+.lianmishu.com'
+  - '+.lianouyiyuan.com'
   - '+.lianpingd.com'
   - '+.lianpuie.com'
   - '+.lianqi.net'
@@ -37134,7 +37117,6 @@ payload:
   - '+.mao-shen.com'
   - '+.mao.bz'
   - '+.mao.li'
-  - '+.mao999.com'
   - '+.maobotv.com'
   - '+.maobugames.com'
   - '+.maodou.com'
@@ -37856,7 +37838,6 @@ payload:
   - '+.mianjue.com'
   - '+.mianshi365.com'
   - '+.mianshui365.com'
-  - '+.miantiao.me'
   - '+.mianwai.com'
   - '+.mianxiangxue.com'
   - '+.mianyazulin.com'
@@ -38806,7 +38787,6 @@ payload:
   - '+.mrjeke.com'
   - '+.mrjiang.com'
   - '+.mrjjxw.com'
-  - '+.mrkevin.net'
   - '+.mrlika.com'
   - '+.mro9.com'
   - '+.mross022.com'
@@ -40241,7 +40221,6 @@ payload:
   - '+.nongxinyin.com'
   - '+.nonobank.com'
   - '+.nonozone.net'
-  - '+.noobcoder.club'
   - '+.noobyard.com'
   - '+.noobyy.com'
   - '+.noodba.com'
@@ -40434,7 +40413,6 @@ payload:
   - '+.nuozhan.com'
   - '+.nuozhensh.com'
   - '+.nuqk.com'
-  - '+.nutjs.com'
   - '+.nutriease.com'
   - '+.nutsbp.com'
   - '+.nutspace.com'
@@ -40763,6 +40741,7 @@ payload:
   - '+.oldcat.me'
   - '+.oldding.net'
   - '+.oldking.net'
+  - '+.oldmantvg.net'
   - '+.oldpan.me'
   - '+.olecn.com'
   - '+.oleony.com'
@@ -40870,7 +40849,6 @@ payload:
   - '+.onlinenic.net'
   - '+.onlinesjtu.com'
   - '+.onlinexijiang.com'
-  - '+.onlinknews.com'
   - '+.only-moment.com'
   - '+.only4.work'
   - '+.onlycatch.com'
@@ -41882,7 +41860,6 @@ payload:
   - '+.phyy.com'
   - '+.pi7.com'
   - '+.pianhd.com'
-  - '+.pianke.me'
   - '+.pianohl.com'
   - '+.pianona.com'
   - '+.pianoun.com'
@@ -42376,7 +42353,6 @@ payload:
   - '+.powerxene.com'
   - '+.powsir.com'
   - '+.powzamedia.com'
-  - '+.poxiaotv.com'
   - '+.pozou.com'
   - '+.pp-xxgd.com'
   - '+.pp.cc'
@@ -45487,7 +45463,6 @@ payload:
   - '+.sanhe-scale.com'
   - '+.sanhucidiao.cc'
   - '+.sanjiang.com'
-  - '+.sanjiangpm.com'
   - '+.sanjiaoniu.com'
   - '+.sanjiasoft.com'
   - '+.sanjieke.com'
@@ -45713,7 +45688,6 @@ payload:
   - '+.scommander.com'
   - '+.scoregg.com'
   - '+.scottfamilyadventures.com'
-  - '+.scottwhitelaw.com'
   - '+.scpgroup.com'
   - '+.scplt.com'
   - '+.scqcp.com'
@@ -47262,7 +47236,6 @@ payload:
   - '+.shuoba.org'
   - '+.shuobao.com'
   - '+.shuobofootball.xyz'
-  - '+.shuoboku.com'
   - '+.shuocdn.com'
   - '+.shuodedui.com'
   - '+.shuomingshu.net'
@@ -47340,7 +47313,6 @@ payload:
   - '+.shygc.net'
   - '+.shyhhema.com'
   - '+.shyihuoh.com'
-  - '+.shyjad.com'
   - '+.shykx.com'
   - '+.shykz123456.com'
   - '+.shymte.com'
@@ -47546,7 +47518,6 @@ payload:
   - '+.sinobaron.com'
   - '+.sinobasalt.com'
   - '+.sinobasedm.com'
-  - '+.sinoca.com'
   - '+.sinocare.com'
   - '+.sinocars.com'
   - '+.sinocateringexpo.com'
@@ -47697,7 +47668,6 @@ payload:
   - '+.sjf029.com'
   - '+.sjfcdn.com'
   - '+.sjfpro.com'
-  - '+.sjfs.xyz'
   - '+.sjfzxm.com'
   - '+.sjgh94.com'
   - '+.sjgle.com'
@@ -48578,7 +48548,6 @@ payload:
   - '+.ssdzg.com'
   - '+.sseinfo.com'
   - '+.ssf.cc'
-  - '+.ssfiction.com'
   - '+.ssgabc.com'
   - '+.ssgeek.com'
   - '+.ssggg.com'
@@ -49916,7 +49885,6 @@ payload:
   - '+.tangtang.org'
   - '+.tanguan.net'
   - '+.tangux.com'
-  - '+.tangwumo.com'
   - '+.tangyingkang.com'
   - '+.tangzhuan666.com'
   - '+.tanhaibo.net'
@@ -51031,6 +50999,7 @@ payload:
   - '+.tlinx.com'
   - '+.tlivecdn.com'
   - '+.tlivemcdn.com'
+  - '+.tliveplay.com'
   - '+.tlivepush.com'
   - '+.tlivesource.com'
   - '+.tljcw.com'
@@ -52167,7 +52136,6 @@ payload:
   - '+.tyymt.com'
   - '+.tyzscl.com'
   - '+.tz-dsp.com'
-  - '+.tz-wf.com'
   - '+.tz.app'
   - '+.tz121.com'
   - '+.tz12306.com'
@@ -52585,7 +52553,6 @@ payload:
   - '+.unionwebpay.com'
   - '+.uniostay.com'
   - '+.uniow.com'
-  - '+.uniprospect.com'
   - '+.uniproud.com'
   - '+.uniqueway.com'
   - '+.uniscope.com'
@@ -59136,7 +59103,6 @@ payload:
   - '+.ybtong.com'
   - '+.ybtvyun.com'
   - '+.ybvip.com'
-  - '+.ybvipdns.com'
   - '+.ybvv.com'
   - '+.ybword.com'
   - '+.ybxsgg.com'
@@ -61038,7 +61004,6 @@ payload:
   - '+.yuenshui.com'
   - '+.yuenwooping-truelegend.com'
   - '+.yuepaijia.com'
-  - '+.yuepaow.net'
   - '+.yueplus.ink'
   - '+.yueqi.com'
   - '+.yueqiquan.com'
@@ -61626,7 +61591,6 @@ payload:
   - '+.yygold.com'
   - '+.yygrammar.com'
   - '+.yygzs.com'
-  - '+.yyh.la'
   - '+.yyhao.com'
   - '+.yyhh.com'
   - '+.yyhhaa.com'
@@ -61677,7 +61641,6 @@ payload:
   - '+.yyy5414.com'
   - '+.yyyeee.com'
   - '+.yyyy.games'
-  - '+.yyyy8888.com'
   - '+.yyyyy.run'
   - '+.yyzai.com'
   - '+.yyziyuan1.com'
@@ -62389,7 +62352,6 @@ payload:
   - '+.zhaocait.com'
   - '+.zhaocaiyan.com'
   - '+.zhaochafa.com'
-  - '+.zhaocheyun.com'
   - '+.zhaoda.net'
   - '+.zhaodanji.com'
   - '+.zhaodatu.com'
@@ -62884,7 +62846,6 @@ payload:
   - '+.zhongguohao123.com'
   - '+.zhongguohuo.com'
   - '+.zhongguojie.org'
-  - '+.zhongguojixiewang.com'
   - '+.zhongguopeixun.net'
   - '+.zhongguose.com'
   - '+.zhongguosou.com'
