--- a/directbak.yaml
+++ b/directbak.yaml
@@ -971,7 +971,6 @@ payload:
   - '+.123456img.com'
   - '+.12345good.com'
   - '+.12345good.net'
-  - '+.12345szzx.com'
   - '+.12348.net'
   - '+.12349.net'
   - '+.1234biao.com'
@@ -1213,7 +1212,6 @@ payload:
   - '+.15str.com'
   - '+.15tianqi.com'
   - '+.15w.com'
-  - '+.15wz.com'
   - '+.15xdd.com'
   - '+.15yc.com'
   - '+.15yl.com'
@@ -2037,7 +2035,6 @@ payload:
   - '+.22dm.com'
   - '+.22doc.com'
   - '+.22edu.com'
-  - '+.22ff.com'
   - '+.22hd.com'
   - '+.22ja.com'
   - '+.22k9.com'
@@ -8947,7 +8944,6 @@ payload:
   - '+.aso120.com'
   - '+.asoasm.com'
   - '+.asomob.com'
-  - '+.asoulfan.com'
   - '+.asoulwiki.com'
   - '+.asp168.com'
   - '+.asp300.com'
@@ -10544,6 +10540,7 @@ payload:
   - '+.binaryai.net'
   - '+.binaryai.tech'
   - '+.binbinyl.com'
+  - '+.binbla.com'
   - '+.bincailiuxue.com'
   - '+.binfen.tv'
   - '+.binfenyeke.com'
@@ -15791,7 +15788,6 @@ payload:
   - '+.coocare.com'
   - '+.coocox.org'
   - '+.coodir.com'
-  - '+.coodub.com'
   - '+.coofans.com'
   - '+.cooffee.net'
   - '+.cooh5.com'
@@ -19903,7 +19899,6 @@ payload:
   - '+.eeio99.com'
   - '+.eeioe.com'
   - '+.eelly.com'
-  - '+.eeloves.com'
   - '+.eeook.com'
   - '+.eeparking.com'
   - '+.eeq8.com'
@@ -21174,7 +21169,6 @@ payload:
   - '+.faxdns.net'
   - '+.faxingchina.com'
   - '+.faxingcn.com'
-  - '+.faxingnet.com'
   - '+.faxingsj.com'
   - '+.faxingtupian.com'
   - '+.faxingzhan.com'
@@ -22683,7 +22677,6 @@ payload:
   - '+.gao4.com'
   - '+.gao7.com'
   - '+.gao7gao8.com'
-  - '+.gaobata.com'
   - '+.gaobei.com'
   - '+.gaocangyun.com'
   - '+.gaocegege.com'
@@ -24485,7 +24478,6 @@ payload:
   - '+.gz91.com'
   - '+.gzasp.net'
   - '+.gzate.com'
-  - '+.gzaune.com'
   - '+.gzbaibian.net'
   - '+.gzbaozhilin.com'
   - '+.gzbio.net'
@@ -24984,6 +24976,7 @@ payload:
   - '+.hangzhouzhiqi.com'
   - '+.hanhai.net'
   - '+.hanhaiqikan.com'
+  - '+.hanhuatin.com'
   - '+.hanhwlab.com'
   - '+.hanjianbing.org'
   - '+.hanjiaying.com'
@@ -26930,7 +26923,6 @@ payload:
   - '+.hpool.online'
   - '+.hprt.com'
   - '+.hprx.com'
-  - '+.hpshq.com'
   - '+.hpstore.cc'
   - '+.hpttue.com'
   - '+.hpuoj.com'
@@ -29739,6 +29731,7 @@ payload:
   - '+.ireadweek.com'
   - '+.ireadyit.com'
   - '+.irealbest.com'
+  - '+.irealcare.com'
   - '+.irealtech.com'
   - '+.irecyclingtimes.com'
   - '+.iredwhale.com'
@@ -31027,6 +31020,7 @@ payload:
   - '+.jiepeng023.com'
   - '+.jieqi.com'
   - '+.jieqinwang.com'
+  - '+.jiese91.com'
   - '+.jieshengit.com'
   - '+.jieshimt8.com'
   - '+.jieshu.me'
@@ -32486,7 +32480,6 @@ payload:
   - '+.jxbhwl.com'
   - '+.jxbscbd.com'
   - '+.jxc4.com'
-  - '+.jxcaipu.com'
   - '+.jxcb.net'
   - '+.jxccb.com'
   - '+.jxcsedu.com'
@@ -34101,6 +34094,7 @@ payload:
   - '+.ky010.vip'
   - '+.ky01002.com'
   - '+.ky01005.com'
+  - '+.ky01010.com'
   - '+.ky107.co'
   - '+.ky151.co'
   - '+.ky55005.com'
@@ -35557,7 +35551,6 @@ payload:
   - '+.liquidnetwork.com'
   - '+.liqunshop.com'
   - '+.liqwei.com'
-  - '+.lirenling.com'
   - '+.liriansu.com'
   - '+.lirui.name'
   - '+.lis99.com'
@@ -36233,6 +36226,7 @@ payload:
   - '+.lr-link.com'
   - '+.lrc99.com'
   - '+.lrcb.net'
+  - '+.lrcgc.com'
   - '+.lrcku.com'
   - '+.lrhold.net'
   - '+.lrist.com'
@@ -36899,7 +36893,6 @@ payload:
   - '+.maidou.com'
   - '+.maidrom.net'
   - '+.maiduo.com'
-  - '+.maienguoji.com'
   - '+.maifjb.com'
   - '+.maigoo.com'
   - '+.maihaoche.com'
@@ -40354,7 +40347,6 @@ payload:
   - '+.ntfabu.com'
   - '+.ntflk.com'
   - '+.ntfsformac.cc'
-  - '+.nthfw.com'
   - '+.nthysp.com'
   - '+.ntjob88.com'
   - '+.ntjoy.com'
@@ -40484,6 +40476,7 @@ payload:
   - '+.nybai.com'
   - '+.nybaidu.net'
   - '+.nyckidsclub.com'
+  - '+.nylingshang.com'
   - '+.nync.com'
   - '+.nypd520.com'
   - '+.nyq.ink'
@@ -41035,7 +41028,6 @@ payload:
   - '+.orz.asia'
   - '+.orz123.com'
   - '+.orz520.com'
-  - '+.orzjoy.com'
   - '+.os-easy.com'
   - '+.os-v.com'
   - '+.os7blue.com'
@@ -45147,7 +45139,6 @@ payload:
   - '+.rugao35.com'
   - '+.ruguoapp.com'
   - '+.ruhnn.com'
-  - '+.rui2.net'
   - '+.ruian.com'
   - '+.ruibai.com'
   - '+.ruichuangfagao.com'
@@ -47404,7 +47395,6 @@ payload:
   - '+.sijijun.com'
   - '+.sijinchuanbo.com'
   - '+.sijitao.net'
-  - '+.sike.cc'
   - '+.sikiedu.com'
   - '+.silanggame.com'
   - '+.sileadinc.com'
@@ -48511,6 +48501,7 @@ payload:
   - '+.sqzw.com'
   - '+.srcb.com'
   - '+.srcbcz.com'
+  - '+.srcgsre.com'
   - '+.srcmsh.com'
   - '+.srell.com'
   - '+.srfip.com'
@@ -49509,7 +49500,6 @@ payload:
   - '+.szfx.com'
   - '+.szfyhd.com'
   - '+.szgalaxy.com'
-  - '+.szgft.com'
   - '+.szggzy.com'
   - '+.szgky.com'
   - '+.szgla.com'
@@ -52332,7 +52322,6 @@ payload:
   - '+.uedna.com'
   - '+.uedsc.com'
   - '+.ueeshop.com'
-  - '+.ueexz.com'
   - '+.uehtml.com'
   - '+.ueibo.com'
   - '+.uelike.com'
@@ -52784,7 +52773,6 @@ payload:
   - '+.uu89.com'
   - '+.uu898.com'
   - '+.uuaa.net'
-  - '+.uuaoz.com'
   - '+.uucolor.com'
   - '+.uudsp.com'
   - '+.uuecs.com'
@@ -54033,6 +54021,7 @@ payload:
   - '+.wawayaya.net'
   - '+.waxrain.com'
   - '+.waxxh.me'
+  - '+.way2solo.com'
   - '+.wayboosz.com'
   - '+.wayhu.cc'
   - '+.wayhu8.com'
@@ -56790,7 +56779,6 @@ payload:
   - '+.xianfengsg.com'
   - '+.xiang5.com'
   - '+.xiang578.com'
-  - '+.xiangaiwang.com'
   - '+.xiangange.com'
   - '+.xianganquan.com'
   - '+.xianganyu.com'
@@ -58114,6 +58102,7 @@ payload:
   - '+.xoliao.com'
   - '+.xooooa.com'
   - '+.xorpay.com'
+  - '+.xoudou.com'
   - '+.xox8688.com'
   - '+.xox8995.com'
   - '+.xox9325.com'
@@ -58613,9 +58602,6 @@ payload:
   - '+.xxmac.com'
   - '+.xxmanhua.info'
   - '+.xxmh21.com'
-  - '+.xxmh223.com'
-  - '+.xxmh225.com'
-  - '+.xxmh226.com'
   - '+.xxminizu.com'
   - '+.xxnets.net'
   - '+.xxnmcd.com'
@@ -59606,7 +59592,6 @@ payload:
   - '+.yikeweiqi.com'
   - '+.yikexue.com'
   - '+.yikeyz.com'
-  - '+.yikm.net'
   - '+.yikuaide.com'
   - '+.yikuaiqu.com'
   - '+.yikuns.com'
@@ -60923,7 +60908,6 @@ payload:
   - '+.yuanrenbang.com'
   - '+.yuanrengu.com'
   - '+.yuanrenxue.com'
-  - '+.yuanseedu.com'
   - '+.yuansfer.com'
   - '+.yuanshanbx.com'
   - '+.yuanshen.com'
